 + AI hedgehogs can now use Bee, Vampirism and Time Box
 + Improved hedgehog spawns on maps that lack land mass or free space
 + Hogs no longer spawn on icy terrain
 + Temporarily suspend Heavy Wind mode while turn timer is not running
 + Engine supports now really gigantic maps
 * Fixed cursor often jumping back to screen center when putting target location while moving cursor
 * Fixed team getting infinite ammo when stockpiling >= 100 ammo (max. finite ammo is now limited to 99)
 * Fixed failure to collect crate across wrap world edge
 * Remove buggy “/finish” chat command
 * Fix key controls not working in ammo menu: ammo menu, placement, camera/cursor movement keys
 * Various other fixes

Game engine (graphics, sounds and texts):
 + Show indicator symbols at bottom right while extra damage or low gravity are active
 + Color coding for the turn timer: green = ready timer, yellow = turn in progress, red = retreat timer, gray = timer paused
 + Play countdown sounds at 1-4 seconds turn time
 + Several new sound effects for weapons and utilities
 + More ticker messages: Hog gets sick, king died, hog was resurrected, hog time travels (and returns), timeout, kamikaze
 + Small visual effects enhancements: Baseball bat, dynamite and more
 + Render graves behind everything else, so that they can't hide mines etc.
 * Video recording functionality is restored
 * Fixed screenshots being too bright if taken in quick succession
 * Fixed hedgehog voices missing a response type (Justyouwait/"You're gonna pay for that") on some platforms (e.g. GNU/Linux)
 * Fixed SD flakes of themes not working if regular flakes were disabled
 * Fixed Seduction's "Yoohoo!" sound not playing
 * Fixed hedgehogs saying “Missed” when drowning enemy without dealing damage
 * Fixed enemy saying "Missed” when giving poison without direct damage
 * Fixed hedgehogs not saying “Stupid” and not displaying announcer message for inflicting self-harm
 * Fixed incorrect time box tooltip when in Sudden Death